fix(reference-card-linked-header): fix alignment

--- a/client/src/components/Participants/cards/ReferenceCard/Headers/ReferenceCardLinkedHeader.module.scss
+++ b/client/src/components/Participants/cards/ReferenceCard/Headers/ReferenceCardLinkedHeader.module.scss
@@ -13,7 +13,6 @@
         padding-bottom: spacing(10);
 
         .moreInformationLink {
-            margin-left: 386px;
             padding: spacing(6) 0 0;
         }
         .moreInformationContentContaier {
